# TuAnh

./: README.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: DataTable.tsx  GenerationPanel.tsx  LabelDesigner.tsx  MappingStudio.tsx  UploadSection.tsx
src/services/: aiService.ts  excelService.ts  geminiService.ts  wordService.ts
src/store/: useAppStore.ts
