[package]
name = "word-batch-gen"
version = "0.1.0"
description = "Desktop Word Batch Generator"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
tauri = { version = "1.6", features = [ "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# it disables the internal dev server and helps tauri to find your core assets.
custom-protocol = ["tauri/custom-protocol"]
